* Fixed front page images and blog layout issue

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/ordered-container.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/ordered-container.scss
@@ -92,9 +92,11 @@
   
   // Images card
   .ordered-container__item--frontpage-images {
+    align-self: flex-start;
     flex: 1 1 calc(50% - #{$ordered-container-item-gutter});
     margin: 0 $ordered-container-item-gutter 0 0;
     order: 3;
+    overflow: hidden; // This prevents slick carousel to reserve 100% fill entire container some reason!
   }
   
   // Blogs card
